syntax = "proto3";

package cri;

option go_package = "cri/";

service RuntimeService {
  rpc CreateContainer(CreateContainerRequest) returns (CreateContainerResponse);
}

message CreateContainerRequest {
  string image = 2;
}

message CreateContainerResponse {
  string container_id = 1;
}
