package cri

import (
	"context"
	"fmt"
)

// Define the server struct
type Server struct {
	// Define any necessary fields
    UnimplementedRuntimeServiceServer
}

// Implement the gRPC service methods
func (s *Server) CreateContainer(ctx context.Context, req *CreateContainerRequest) (*CreateContainerResponse, error) {
	fmt.Println("Received container creation request:", req)
	return &CreateContainerResponse{ContainerId: "SomeID"}, nil
}



